# autobahn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  _config.yml  autobahn.example.toml  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
_layouts/: default.html
benches/: consciousness_benchmarks.rs
demo/: README.md  requirements.txt  run_validation.py  setup.py
demo/examples/: basic_usage.py
demo/scqp/: __init__.py  processor.py
demo/scqp/core/: __init__.py  bmd_validator.py  counterfactual_unit.py  gas_molecular_engine.py  proof_validator.py  s_entropy_engine.py  temporal_processor.py
demo/scqp/utils/: __init__.py  data_processing.py  mathematical.py  visualization.py
demo/scqp/validation/: __init__.py  bmd_validation.py  comprehensive_validation.py  counterfactual_validation.py  gas_molecular_validation.py  performance_validation.py  s_entropy_validation.py  temporal_validation.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: api-reference.md  biological-integration.md  bmds.md  examples.md  index.md
docs/fundamentals/: bio-rag.md  category.md  code.md  fire-consiousness-engine.md
docs/st-stella/: hegel.tex  meaning.tex  mechanistic.tex  naked-engine.tex  nebuchadnezzar.tex  points.md  problem-reduction.tex  st-stellas-circuits.tex
examples/: complete_fire_consciousness_demo.rs  complete_implementation.rs  composable_quantum_processors.rs  comprehensive_example.rs  comprehensive_hardware_optical_demo.rs  enhanced_bio_rag_demo.rs  fire_consciousness_demo.rs  turbulance_compiler_demo.rs
publication/: structure.md
scripts/: build.sh  setup.sh  test.sh
src/: benchmarking.rs  biological.rs  configuration.rs  deception.rs  error.rs  hardware.rs  lib.rs  main.rs  monitor.rs  optical.rs  oscillatory_rag.rs  photosynthesis.rs  plugins.rs  probabilistic_engine.rs  research_dev.rs  temporal_processor.rs  testing.rs  traits.rs  types.rs  utils.rs
src/adversarial/: mod.rs
src/atp/: mod.rs  quantum_manager.rs
src/biological/: maxwell_demons_turbulance.rs
src/champagne/: mod.rs
src/consciousness/: fire_engine.rs  mod.rs
src/entropy/: mod.rs
src/hierarchy/: mod.rs
src/models/: mod.rs
src/oscillatory/: entropy.rs  mod.rs
src/quantum/: mod.rs
src/rag/: mod.rs
src/tres_commas/: context.rs  engine.rs  intuition.rs  mod.rs  reasoning.rs
src/turbulance/: ast.rs  compiler.rs  executor.rs  integration.rs  lexer.rs  mod.rs  parser.rs
src/utils/: helpers.rs  math.rs  mod.rs  text.rs
src/v8_pipeline/: biological_data_processor.rs  biological_processor.rs  electron_transport.rs  energy_manager.rs  glycolysis.rs  krebs_cycle.rs  mod.rs
src/v8_pipeline/modules/: clothesline.rs  diadochi.rs  diggiden.rs  foursidedtriangle.rs  hatata.rs  mod.rs  mzekezeke.rs  nicotine.rs  pungwe.rs  spectacular.rs  zengeza.rs
