[package]
name = "autobahn"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.f.sachikonye@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A biological metabolism computer for probabilistic information processing"
homepage = "https://github.com/fullscreen-triangle/autobahn"
repository = "https://github.com/fullscreen-triangle/autobahn"
documentation = "https://docs.rs/autobahn"
keywords = ["biology", "metabolism", "probabilistic", "ai", "bioinformatics"]
categories = ["science", "algorithms", "simulation"]
readme = "README.md"

[lib]
name = "autobahn"
crate-type = ["lib"]

[[bin]]
name = "autobahn-cli"
path = "src/bin/autobahn-cli.rs"

[dependencies]
# Core probabilistic computing
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
statrs = "0.16"

# Bayesian networks and probabilistic inference
petgraph = "0.6"
ndarray = "0.15"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async processing for concurrent metabolism
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Logging and diagnostics
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and temporal processing
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hash functions for cryptographic puzzles
sha2 = "0.10"
blake3 = "1.0"

# Fuzzy logic support
fuzzy-logic = "0.1"

# Mathematical optimization
optimization = "0.2"

# Text processing utilities
regex = "1.0"
unicode-segmentation = "1.0"

# Configuration management
toml = "0.8"
config = "0.14"
num_cpus = "1.0"

# CLI support
clap = "2.34"

# Hardware oscillation and system monitoring
sysinfo = "0.29"
psutil = "3.2"

# Display capture and image processing
image = "0.24"
screenshots = "0.3"
xcap = "0.0.8"

# Color space conversions and analysis
colorful = "0.2"
palette = "0.7"

# Real-time data processing
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Hardware interface capabilities
serialport = "4.0"
hidapi = "2.0"

# Frequency analysis and signal processing
rustfft = "6.0"
spectrum-analyzer = "1.0"

# LED and GPIO control (cross-platform)
rppal = { version = "0.14", optional = true }
ftdi = { version = "0.1", optional = true }

[dev-dependencies]
# Testing frameworks
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

# Benchmarking
bencher = "0.1"

[features]
default = ["full"]
full = ["v8-pipeline", "tres-commas", "champagne-phase", "adversarial", "hardware-sync", "optical-processing", "environmental-photosynthesis"]
v8-pipeline = []
tres-commas = []
champagne-phase = []
adversarial = []
hardware-sync = []
optical-processing = []
environmental-photosynthesis = []
gpio-control = ["rppal", "ftdi"]

# Development features
debug-mode = []
extensive-logging = []

[[bench]]
name = "metabolism_benchmarks"
harness = false

[[example]]
name = "basic_processing"
path = "examples/basic_processing.rs"

[[example]]
name = "probabilistic_analysis"
path = "examples/probabilistic_analysis.rs"

[[example]]
name = "bioinformatics_integration"
path = "examples/bioinformatics_integration.rs"

[[example]]
name = "comprehensive_hardware_optical_demo"
path = "examples/comprehensive_hardware_optical_demo.rs" 